# grouping_problem

./: .gitignore  CMakeLists.txt  README.md  build_script.sh  config.h.in
.github/workflows/: cmake-single-platform.yml
app/: CMakeLists.txt  groupingProblem.cpp  visualize.cpp
app/visualization/: DrawProblem.cpp
example/: exampleProblem.json
schemas/: problem.fbs
src/: CMakeLists.txt  main.cpp
src/problemEntities/: GroupingProblemInstance.cpp  GroupingProblemInstance.hpp
src/reader/: ReaderUtils.cpp  ReaderUtils.hpp
src/solver/: Solver.hpp
src/solver/geneticAlgo/: GeneticAlgorithmSolver.cpp  GeneticAlgorithmSolver.hpp
src/visualization/: CMakeLists.txt  DrawProblem.cpp  DrawProblem.hpp  visualize.cpp
tests/: CMakeLists.txt  GroupingProblemInstanceTest.cpp  setupTest.cpp
